Use shorter syntax